[gd_scene load_steps=5 format=2]

[ext_resource path="res://Core/Network/NetworkSetup.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Kenney Mini.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 3 )

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Test" type="Label" parent="."]
margin_right = 320.0
margin_bottom = 16.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxLabels" type="VBoxContainer" parent="Multiplayer_configure"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 31.0
margin_right = -16.0
margin_bottom = 49.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerIPAdress" type="LineEdit" parent="Multiplayer_configure/VBoxLabels"]
margin_right = 384.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "ws://65.21.250.176:9080"
placeholder_text = "Enter IP Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Multiplayer_configure"]
margin_left = 101.0
margin_top = 71.0
margin_right = 217.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateServer" type="Button" parent="Multiplayer_configure/VBox"]
margin_right = 116.0
margin_bottom = 20.0
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServer" type="Button" parent="Multiplayer_configure/VBox"]
margin_top = 24.0
margin_right = 116.0
margin_bottom = 44.0
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="device_ip_address" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Sprite" parent="."]
position = Vector2( 46.4324, 195.555 )
texture = ExtResource( 4 )

[node name="Player2" type="Sprite" parent="."]
position = Vector2( 271.5, 112 )
texture = ExtResource( 4 )

[connection signal="pressed" from="Multiplayer_configure/VBox/CreateServer" to="." method="_on_create_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/VBox/JoinServer" to="." method="_on_join_server_pressed"]
